message player_basic_info_t {
	required int32 userid 			= 1;	// 米米号
	required int32 reg_time 		= 2;	// 玩家注册时间
	required int32 channel_id		= 3;	// 玩家渠道号
}
message sw_attach_item{
	required uint32 id					= 1;	//物品编号
	required uint32 num					= 2;	//物品数目
}
message userinfo{
	required uint32 userid          = 1;    // 米米号
	required uint32 reg_time        = 2;    // 玩家注册时间
	required uint32 channel_id      = 3;    // 玩家渠道号
	required uint32 zone_id			= 4;	// 服务器
	required uint32 mail_id			= 5;	// 邮件编号
	required uint32 hasattach		= 6;	// 是否有附件

}
message sw_style{
	required uint32 red					= 1;	//颜色
	required uint32 green				= 2;	//绿色
	required uint32 blue				= 3;	//蓝色
	required bytes text					= 4;	//文本
	optional uint32 fontsize			= 5;    //字体大小
}
message sw_announcement{
	repeated sw_style  context          = 1;	//内容
	optional uint32 from				= 2;	//起止时间
	optional uint32 to 				    = 3;	//截止时间
	optional uint32 count				= 4;	//次数
	required uint32 ann_id				= 5;	//id
	optional bytes title				= 6;    //标题
}
message item_attachment {
    required uint32 item_id				= 1;	// 物品id
    required uint32 item_num			= 2;	// 物品数量
}
message mail_info_t {
    required int64 mail_id             = 1;    // 邮件id
    required uint32 mail_status         = 2;    // 邮件状态(0:新增 1:未阅 2:已阅 3:已删除(删除状态是真的删除还是置标志位再讨论))
}

message user_info{
	required uint64 userid					= 1;	// 用户
	required uint32 reg_tm 					= 2;	// 注册时间
	required uint32 zone_id					= 3;	// 服务器号
	required uint32 channel_id				= 4;	// 渠道号
}

message sw_msgheader_t {
    required string msg_name		  	= 1;    // 协议名
    optional uint32 ret 				= 2;
	optional uint64 gateway_session     = 3;
}


message sw_errorcode_out {

}
message reg_server_in {
    required uint32 server_id 		= 1;
    required uint32 listen_port 	= 2;
}
message reg_server_out {

}


// 上报成功后,假如online此时已经有玩家连线(online断线后重连sw)需要同步玩家数据 不需要回包
message online_notify_sync_player_info_in {
    repeated player_basic_info_t player_list = 1; // 如果是重新连接到sw,则需上报已在online上的玩家信息
}

// 玩家登录/下线时上报 不需要回包
message online_notify_report_player_onoff_in {
    required player_basic_info_t basic 	= 1;
    required uint32 login_or_logout 	= 2;//1上线 2下线
}

// 踢人下线通知包(一个uid + channel_id 只能同时有一个reg_time在线)
message sw_notify_kick_player_off_out {
    required player_basic_info_t basic = 1;
}

// --------------------邮件协议-------------------//
message add_new_mail_in{
	required bytes title               = 1;    // 邮件名称
	required bytes from                = 2;    // 发件人
	required bytes content             = 3;    // 内容
	repeated sw_attach_item items      = 4;    // 附件
}

message add_new_mail_out{
	required int32 mail_id		   = 1;    //邮件编号
}


message add_new_mail_rel_in{
	repeated userinfo info			= 1;	//邮件用户信息
}

message add_new_mail_rel_out{
}

message mail_rel_flush_in{			//邮件关系到数据库

}

message mail_rel_flush_out{			//邮件关系到数据库

}

message serial_online_rsp{
	required player_basic_info_t basic = 1;    //基础信息
	required uint32 zone_id			   = 2;	   //服务器号
	required bytes msg_name	   		   = 3;    //消息名
	required bytes msg_body        	   = 4;    //消息体
}

message sw_login_announcement_in{
	required uint32 channelid			= 1;	//渠道号
	required sw_announcement note		= 2;	//公告
}

message sw_login_announcement_kefu_out{

}

message sw_announcement_in{
	required uint32 zone_id            	= 1;	//服务器
	repeated sw_announcement note		= 2;	//公告
}

message sw_announcement_out{
	repeated sw_announcement note		= 2;	//公告
}


message sw_announcement_kefu_out{

}

message sw_ma_advertising_in{
	required uint32 zone_id				= 1;	//服务器
	repeated sw_style content			= 2;    //内容
	required uint32 opt                 = 3;    //优先级
}

message sw_ma_advertising_kefu_out{

}

message sw_ma_advertising_out{
	repeated sw_style content			= 1;    //内容
	required uint32 opt                 = 2;    //优先级
}

// ------------------------- 充值 ---------------------------------------------//
message sw_add_diamond_in {
    required uint32 userid = 1;
    required uint32 reg_tm = 2;
    required uint32 channel_id = 3;
    required uint32 buy_diamond_num = 4; // 需要添加钻石的数量(购买)
    required uint32 ext_diamond_num = 5; // 需要添加钻石的数量(赠送)
    required uint32 buy_time = 6; // 购买时间
    required uint32 buy_channel_id	 = 7;	// 购买渠道号
    required uint32 cost_money	 = 8;	// 花费的钱(国内单位:rmb 分)
    required uint64 order_index = 9; // 订单index
    required uint32 add_times	 = 10;	// 加倍

    optional uint32 item_id = 11; // 道具ID
    optional uint32 item_count = 12; // 道具数量
    optional uint32 gift_id = 13; // 礼物ID
    optional uint32 gift_count = 14; // 礼物数量
    optional uint32 consume_type = 15; // 海外专用 1的时候为首充
    optional uint32 zone_id	 = 16;
}

message sw_add_diamond_out {
    required uint64 order_index = 1; // 订单index
}

// ------------------------- 邮件 ---------------------------------------------//
//-------------------- mail svc 和online 通信部分 ----------------------------
message mail_all_info_t {
	required uint32 mail_id_high            = 1;    // 添加邮件的id 高32位
	required uint32 mail_id_low             = 2;    // 添加邮件的id 低32位
	required bytes title                    = 3;    // 邮件名称
	required bytes from                     = 4;    // 发件人
	required bytes content                  = 5;    // 内容
	repeated item_attachment items          = 6;    // 附件
}
// online 请求邮件列表
message sw_get_player_mail_list_in {
    required player_basic_info_t player     = 1;    // 玩家信息
}
message sw_get_player_mail_list_out {
    required player_basic_info_t player     = 1;    // 玩家信息
    repeated mail_info_t mails              = 2;    // 玩家邮件信息
}
// online 更新邮件列表 (不等mail svc回包)
message sw_update_player_mail_list_in {
    required player_basic_info_t player     = 1;    // 玩家信息
    repeated mail_info_t mails              = 2;    // 玩家邮件信息
}
// mail svc 通知online 有新邮件(不等online回包)
message sw_notify_player_new_mail_out {
    repeated player_basic_info_t players    = 1;    // 玩家信息(size = 0时通知全服玩家有新邮件)
    required mail_info_t new_mail           = 2;    // 玩家新邮件信息
}

//-------------------- mail svc 和login 通信部分 ----------------------------
// 玩家信息同步到leveldb(方便对全服的玩家发送邮件) login server 会调用
message sw_create_new_player_in {
	required uint32 server_id               = 1;    // 玩家服务器id
	required player_basic_info_t player     = 2;    // 玩家信息
}

//-------------------- gm 和switch 通信部分 ----------------------------
// 添加新邮件
message sw_add_new_mail_in {
	required uint32 server_id				= 1;	// 邮件所属服务器id
	required bytes title               		= 2;    // 邮件名称
	required bytes from                		= 3;    // 发件人
	required bytes content             		= 4;    // 内容
	repeated item_attachment items      	= 5;    // 附件
	optional bool is_full_svc_mail			= 6;	// 是否是全服邮件(true:是 false:不是)
	optional int64 mail_id					= 7;	// 邮件id(sw 给 ol的msg必须要有该字段)
}
message sw_add_new_mail_out {
	required uint32 mail_id_high			= 1;	// 添加邮件的id 高32位
	required uint32 mail_id_low				= 2;	// 添加邮件的id 低32位
	required uint32 server_id				= 3;	// 邮件所属服务器id
}
// 给玩家添加新邮件(包长控制在60K以内, 每次大约最多给5000人添加新邮件)
message sw_add_new_mail_to_players_in {
	required uint32 mail_id_high			= 1;	// 添加邮件的id 高32位
	required uint32 mail_id_low				= 2;	// 添加邮件的id 低32位
    required uint32 server_id               = 3;    // 邮件所属服务器id
    repeated player_basic_info_t players    = 4;    // 需要添加邮件的玩家(如果size=0, 则给全服人添加新邮件)
	required uint32 page_num				= 5;	// 当前页数(swith 会原样返回给GM, GM接到回包后,继续添加page_num+1的用户信息)
}
message sw_add_new_mail_to_players_out {
	required uint32 mail_id_high			= 1;	// 添加邮件的id 高32位
	required uint32 mail_id_low				= 2;	// 添加邮件的id 低32位
	required uint32 server_id               = 3;    // 邮件所属服务器id
	required uint32 page_num                = 4;	// 当前页数
}

// ------------------------- 邮件 end ---------------------------------------------//

// ------------------------- 配表重读 start ---------------------------------------------//
//-------------------- switch、 online、 GM通信部分 ----------------------------
message sw_notify_reload_conf_in {
	required uint32 server_id               = 1;    // 服务器id
	repeated bytes conf_file_names			= 2;	// 重新加载文件名字
}
// ------------------------- 配表重读 end -----------------------------------------------//



//--------------封号 解封-------------------

message sw_freeze_player_in{
	repeated user_info	info				= 1;	// 冻结玩家信息
	required uint32 time 					= 2;
}

message sw_freeze_player_kefu_out{

}

message sw_unfreeze_player_in{
	repeated user_info	info				= 1;	// 冻结玩家信息
}


message sw_unfreeze_player_kefu_out{

}

message sw_set_attribute_in{
	required uint32 userid					= 1;	// 用户
	required uint32 reg_tm 					= 2;	// 注册时间
	required uint32 zone_id					= 3;	// 服务器
	required uint32 attribute_id			= 4;	// 属性id
	required uint32 attribute_value			= 5;	// 属性值
	required uint32 dead_tm					= 6;	// 有效期 这个是隐藏的 ，填0 为无限
	required uint32 channel_id				= 7;	// 渠道号
}

message sw_set_attribute_kefu_out{
}

message sw_get_server_status_in{
	required uint32 zone_id					= 1;	//服务器ID 0为查找所有服务器状态
}

message server_data{
    required uint32 zone_id					= 1;	//服务器ID
    required uint32 ol_player_num			= 2;	//在线玩家人数
    required uint32 ip                      = 3;
    required uint32 port                      = 4;
}
message sw_get_server_status_out{
    repeated server_data server                = 1;
}


//玩家背包道具、礼物修改接口g
message sw_user_bag_modify_in {
    required uint64 user_id     = 1;
	required uint32 reg_tm		= 2;
	required uint32 zone_id		= 3;
    required int32  item_id     = 4; //物品编号
    required int32  item_count  = 5;  //修改物品数量(正数为增加，负数为减少)
    required int32  modify_type = 6; //修改物品类型（type=1 为修改背包物品数量，
                                     //type=0为修改玩家礼品背包的物品数量，默认为1物品背包）
    required int32  delete_type = 7; //是否删除物品（delete=0 为删除所有该类型物品，
									 //number此时无用，delete=1 为不删除，默认为1不删除）
	required uint32 channel_id	= 8;	// 渠道号
}
message sw_user_bag_modify_out {
    required uint64 user_id     = 1;
	required uint32 reg_tm		= 2;
	required uint32 zone_id		= 3;
	required uint32 channel_id	= 4;	// 渠道号
}

message sw_attribute_modify_in{
	required uint64 userid				= 1;	// 用户
	required uint32 reg_tm 				= 2;	// 注册时间
	required uint32 zone_id				= 3;	// 服务器
	required uint32 attribute_id		= 4;	// 属性id
	required int32 attribute_value		= 5;	// 属性值
	required uint32 dead_tm				= 6;	// 有效期 这个是隐藏的 ，填0 为无限
	required uint32 channel_id			= 7;	// 渠道号
}

message sw_ma_vip_control_in{
	required uint32 content				= 1;    //1 开 0 关(00001 vip开,00010 热点问题开,00100 兑换码接口开,01000 邀请好友开,10000 我的推荐人,可杂糅)
}

message sw_ma_vip_control_out{
	required uint32 content				= 1;    //1 开 0 关(00001 vip开,00010 热点问题开,00100 兑换码接口开,01000 邀请好友开,10000 我的推荐人,可杂糅)
}

message sw_loginaward_limittime_in{
    required uint32 zone_id	 = 1;	// 服务器ID(0表示全服 其余值表示指定服)
    required bytes title = 2; // 邮件名称
    required bytes from = 3; // 发件人
    required bytes content = 4; // 内容
    required uint32 award_begin	 = 5;	// 发放奖励开始时间
    required uint32 award_end	 = 6;	// 发放奖励结束时间
    repeated item_attachment items = 7; // 附件
    optional uint64 mail_id	 = 8;	// 邮件id(sw 给 ol的msg必须要有该字段)
}

message sw_loginaward_limittime_out{
	required bool bSucc					= 1;	// 设置是否成功(1 succ, 0 faild)
}


